fix(ios): Feedback comments field not readable in dark mode

--- a/app/app.common.scss
+++ b/app/app.common.scss
@@ -66,7 +66,7 @@ label {
     color: var(--colorOnBackground);
 }
 
-mdtextfield {
+mdtextfield, mdtextview {
     stroke-color: var(--colorOutline);
     placeholder-color: var(--colorOutline);
     color: var(--colorOnSurface);
